# agent_teams

./: .gitignore  AGENTS.md  README.md  check_workflow.py  hello.py  output.txt  pyproject.toml  setup.bat  setup.sh  test_mcp_load.py  trigger_smoke_test.py
.agent_teams/: acp.json.example  mcp.json  model.json.example
.agent_teams/roles/: coder.md  coordinator_agent.md  design_builder.md  spec_builder.md  spec_coder.md  spec_design.md  spec_spec.md  spec_verify.md  time.md  verify.md
docs/: api-design.md  architecture_refactor_plan.md  database-schema.md  model-connectivity-retry-design.md  orchestration-strategy.md  role-state-space-recursive-communication.md  role-workspace-memory-design.md
frontend/: README.md
roles/: coder.md  coordinator_agent.md  design_builder.md  spec_builder.md  verify.md
src/agent_teams/: __init__.py
tests/: test_acp_config.py  test_coordinator_tools.py  test_instance_pool.py  test_session_pool.py  test_shell_policy.py  test_skill_manifest.py  test_stage_docs.py  test_stdio_acp_client.py  test_tool_approval_manager.py  test_tool_helpers.py  test_tool_policy.py  test_tool_registry.py
tests/application/: test_rounds_projection_role_instance_map.py  test_run_manager_stop_semantics.py  test_session_rounds_paging.py  test_session_rounds_pending_streams.py
tests/core/: test_task_schema.py
tests/integration_tests/: conftest.py
tests/providers/: test_llm_tool_events.py
tests/roles/: test_coordinator_tools.py
tests/runtime/: test_run_control_manager.py
tests/skills/: test_registry.py
tests/tools/: test_dispatch_tasks.py  test_ripgrep.py  test_stage_docs.py  test_tool_helpers.py  (+1 more)
(+312 files in other folders)
