[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-teams"
version = "0.1.0"
description = "Role-driven multi-agent framework with strong typing and tool-based collaboration."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.7.0",
  "pydantic-ai",
  "pydantic-ai-slim[fastmcp]",
  "PyYAML>=6.0.1",
  "typer>=0.12.3",
  "fastapi>=0.100.0",
  "uvicorn[standard]>=0.23.0",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.6.0",
  "basedpyright>=1.18.0",
]

[project.scripts]
agent-teams = "agent_teams.interfaces.cli.app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyright]
extraPaths = ["src"]
